--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "1.0.0",
   "private": false,
   "description": "Next.js library template with typescript",
-  "source": "src/pages/index.jsx",
+  "source": "src/pages/index.tsx",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
   "sideEffects": false,
   "publishConfig": {
-    "source": "src/pages/index.jsx",
+    "source": "src/pages/index.tsx",
     "main": "dist/index.js"
   },
   "scripts": {
@@ -17,7 +17,7 @@
     "make": "next build",
     "start": "next start",
     "watch": "microbundle --watch",
-    "build": "microbundle --jsx React.createElement --compress ",
+    "build": "microbundle --jsx React.createElement --compress --tsconfig tsconfig.json",
     "prepare": "rm -rf dist && rm -rf .next && yarn build",
     "pack-size": "npm pack && tar -xvzf *.tgz && rm -rf package *.tgz ",
     "publish": "np"
