--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "build": "microbundle --jsx React.createElement --compress --tsconfig tsconfig.json",
     "prepare": "rm -rf dist && rm -rf .next && yarn build",
     "pack-size": "npm pack && tar -xvzf *.tgz && rm -rf package *.tgz ",
-    "publish": "np"
+    "np": "npm login && np"
   },
   "files": [
     "dist",
