--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "scripts": {
     "dev": "next dev",
     "make": "next build",
+    "lint": "next lint",
     "start": "next start",
     "watch": "microbundle --watch",
     "build": "microbundle --jsx React.createElement --compress --tsconfig tsconfig.json",
@@ -51,8 +52,10 @@
   "devDependencies": {
     "@types/node": "^15.12.2",
     "@types/react": "^17.0.11",
-    "microbundle": "^0.13.2",
-    "next": "^10.2.3",
+    "eslint": "^7.28.0",
+    "eslint-config-next": "^11.0.0",
+    "microbundle": "^0.13.3",
+    "next": "^11.0.0",
     "np": "^7.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
