--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
   },
   "scripts": {
     "dev": "next dev",
-    "make": "next build",
+    "build": "next build",
     "lint": "next lint",
     "start": "next start",
     "watch": "microbundle --watch",
-    "build": "microbundle --jsx React.createElement --compress --tsconfig tsconfig.json",
+    "build:package": "microbundle --jsx React.createElement --compress --tsconfig tsconfig.json",
     "prepare": "rm -rf dist && rm -rf .next && yarn build",
     "pack-size": "npm pack && tar -xvzf *.tgz && rm -rf package *.tgz ",
     "publish": "np"
@@ -50,15 +50,15 @@
     "react-dom": ">= 17.0.2"
   },
   "devDependencies": {
-    "@types/node": "^16.7.2",
-    "@types/react": "^17.0.19",
+    "@types/node": "^16.10.1",
+    "@types/react": "^17.0.24",
     "eslint": "^7.32.0",
-    "eslint-config-next": "^11.1.0",
+    "eslint-config-next": "^11.1.2",
     "microbundle": "^0.13.3",
-    "next": "^11.1.0",
+    "next": "^11.1.3-canary.33",
     "np": "^7.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "typescript": "^4.4.2"
+    "typescript": "^4.4.3"
   }
 }
