--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "start": "next start",
     "watch": "microbundle --watch",
     "build:package": "microbundle --jsx React.createElement --compress --tsconfig tsconfig.json",
-    "prepare": "rm -rf dist && rm -rf .next && yarn build",
+    "prepare": "rm -rf dist && rm -rf .next && yarn build:package",
     "pack-size": "npm pack && tar -xvzf *.tgz && rm -rf package *.tgz ",
     "publish": "np"
   },
@@ -50,15 +50,15 @@
     "react-dom": ">= 17.0.2"
   },
   "devDependencies": {
-    "@types/node": "^16.10.1",
-    "@types/react": "^17.0.24",
+    "@types/node": "^16.11.7",
+    "@types/react": "^17.0.35",
     "eslint": "^7.32.0",
-    "eslint-config-next": "^11.1.2",
-    "microbundle": "^0.13.3",
-    "next": "^11.1.3-canary.33",
+    "eslint-config-next": "^12.0.4",
+    "microbundle": "^0.14.1",
+    "next": "^12.0.4",
     "np": "^7.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.4"
   }
 }
