--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "start": "next start",
     "watch": "microbundle --watch",
     "build": "microbundle --jsx React.createElement --compress ",
-    "prepare": "rm -rf dist && rm -rf .next  && rm -rf .next && yarn build",
+    "prepare": "rm -rf dist && rm -rf .next && yarn build:package",
     "pack-size": "npm pack && tar -xvzf *.tgz && rm -rf package *.tgz ",
     "publish": "np"
   },
@@ -51,9 +51,9 @@
   },
   "devDependencies": {
     "eslint": "^7.32.0",
-    "eslint-config-next": "^11.1.0",
-    "microbundle": "^0.13.3",
-    "next": "^11.1.0",
+    "eslint-config-next": "^12.0.4",
+    "microbundle": "^0.14.1",
+    "next": "^12.0.4",
     "np": "^7.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
