--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "lint": "next lint",
     "start": "next start",
     "watch": "microbundle --watch",
-    "build": "microbundle --jsx React.createElement --compress ",
-    "prepare": "rm -rf dist && rm -rf .next && yarn build:package",
+    "build": "microbundle --jsx React.createElement --compress --visualize",
+    "prepare": "rm -rf dist && rm -rf .next && yarn build",
     "pack-size": "npm pack && tar -xvzf *.tgz && rm -rf package *.tgz ",
     "publish": "np"
   },
@@ -50,12 +50,12 @@
     "react-dom": ">= 17.0.2"
   },
   "devDependencies": {
-    "eslint": "^7.32.0",
-    "eslint-config-next": "^12.0.4",
-    "microbundle": "^0.14.1",
-    "next": "^12.0.4",
-    "np": "^7.5.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "eslint": "^8.20.0",
+    "eslint-config-next": "^12.2.3",
+    "microbundle": "^0.15.0",
+    "next": "^12.2.3",
+    "np": "^7.6.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
